--- a/index.html
+++ b/index.html
@@ -5,27 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="style.css" /> 
-    <title>Weather App</title>
+    <title>HAPPYINFO</title>
 </head>
-<body>
-    <main>
-    <!---Forcast right now: Sunset/sunrise etc-->
+    <body>
+        <main>
+            <div id="austinWeather" class="austinWeather"> 
+                <p>Loading....</p>
+            </div>
+            <div id="peopleInSpace" class="peaopleInSpace">
+                <h1>Loading....</h1>
+            </div>
 
-    <div id="forcastRightNow" class="forcast-right-now"> 
-        <p>Loading....</p>
-    </div>
-
-    <!---Image and h1 text-->
-
-    <div id="casualWeatherBox" class="casual-weather-box">
-        <h1>Loading....</h1>
-    </div>
-
-    <!-- Weekdays with this weeks temperatures-->
-
-<div id="weekdays" class="weekdays">
-</main>
-</div>
-      <script src="script.js"></script>
-</body>
+        </main>
+        <script src="script.js"></script>
+    </body>
 </html>
