--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
             <div id="peopleInSpace" class="peaopleInSpace">
                 <h1>Loading....</h1>
             </div>
-
+            <div id="musicGenreStory" class="musicGenreStory">
+                <h1>Loading....</h1>
+            </div>
         </main>
         <script src="script.js"></script>
     </body>
