--- a/index.html
+++ b/index.html
@@ -1,22 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="style.css" /> 
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" type="text/css" href="style.css" />
     <title>HAPPYINFO</title>
-</head>
-    <body>
-        <main>
-            <div id="austinWeather" class="austinWeather"> 
-                <p>Loading....</p>
-            </div>
-            <div id="peopleInSpace" class="peaopleInSpace">
-                <h1>Loading....</h1>
-            </div>
-
-        </main>
-        <script src="script.js"></script>
-    </body>
+  </head>
+  <body>
+    <main>
+      <div id="austinWeather" class="austinWeather">
+        <p>Loading....</p>
+      </div>
+      <div id="peopleInSpace" class="peaopleInSpace">
+        <h1>Loading....</h1>
+      </div>
+      <div id="ageOfName">
+        <p>Loading...</p>
+      </div>
+    </main>
+    <script src="script.js"></script>
+  </body>
 </html>
