Adding kanye quote

--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
       <div id="ageOfName">
         <p>Loading...</p>
       </div>
+      <div id="quoteOfKanye">
+        <p>Loading...</p>
+      </div>
     </main>
     <script src="script.js"></script>
   </body>
